# Bulbizard

./: CMakeLists.txt  LISCENCE.md  README.md
src/: main.c  passgen.c  passgen.h  print.c  print.h
