cmake_minimum_required(VERSION 3.10)
project(bulbizard)
set(CMAKE_PROJECT_VERSION_MAJOR 1)
set(CMAKE_PROJECT_VERSION_MINOR 0)
set(CMAKE_PROJECT_VERSION_PATCH 0)
set(CPACK_PACKAGE_CONTACT "spationaute@protonmail.com")
include(CPack)
add_executable(bulbizard src/main.c src/passgen.c src/passgen.h src/print.c src/print.h)
install(TARGETS bulbizard DESTINATION "bin")
